# mcp-forge-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Justfile  README-es.md  README.md  cliff.toml  config.toml  configuration.html  configuration.md  contributing-guide.html  contributing-guide.md  development.html  development.md  index.html  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  conventional-commits.yml  deploy-docs.yml  release-binaries.yaml  release-docker-images.yaml  release.yml
chart/: Chart.yaml  values.yaml
docs/: _config.yml  configuration.md  index.md  robots.txt
scripts/: __init__.py  generate_benchmark_badges.py
src/mcp_app/: __init__.py  app_config.py  config.py  context.py  fastapi_app.py  main.py  mcp_server.py
src/mcp_app/handlers/: __init__.py  handlers.py
src/mcp_app/mcp_components/: __init__.py  router.py
src/mcp_app/mcp_components/tools/: __init__.py  hello_world.py  whoami.py
src/mcp_app/middlewares/: __init__.py  access_logs.py  jwt_validation.py
src/mcp_app/tools/: hello_world.py  router.py  whoami.py
tests/: test_app_config.py  test_benchmarks.py  test_config.py  test_fastapi_app.py  test_handlers.py  test_jwt_validation.py  test_main.py  test_mcp_server.py  test_middlewares.py  test_tools.py
